<resources>
    <string name="app_name">Trip App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="send">SEND</string>
    <string name="log_in">Log In</string>
    <string name="please_log_in">Please Log In</string>
    <string name="username_email">Username/Email</string>
    <string name="forget_password">Forget PAssword</string>
</resources>