<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/please_sign_up"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/tilFirstName_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="77dp"
            android:hint="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/tilLastName_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle_id"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="77dp"
            android:hint="@string/last_name"
            app:layout_constraintBottom_toTopOf="@+id/tilUserName_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName_id"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="77dp"
            android:hint="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/tilEmail_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLastName_id"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsernameName_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="77dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUserName_id"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail_id"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSignUp_id"
            android:layout_width="132dp"
            android:layout_height="65dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2_id"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword_id"
            app:layout_constraintStart_toStartOf="@+id/tilPassword_id"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword_id"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2_id"
            android:layout_width="171dp"
            android:layout_height="31dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="86dp"
            android:text="@string/have_an_account"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp_id"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvLogin_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="72dp"
            android:text="@string/log_in"
            android:textColor="#497FC2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2_id"
            app:layout_constraintTop_toTopOf="@+id/textView2_id"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>